@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.3908 2003/12/03 02:40:47 xtraeme Exp $
+$NetBSD: CHANGES,v 1.3909 2003/12/03 03:06:19 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -4728,3 +4728,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated intltool to 0.27.2 [xtraeme 2003-12-03]
 	Updated gnome-audio to 2.0.0 [xtraeme 2003-12-03]
 	Updated libart2 to 2.3.16 [xtraeme 2003-12-03]
+	Updated nautilus to 2.2.3.1nb7 [xtraeme 2003-12-03]
